# mcp-fdsnws-event

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Dockerfile  Dockerfile.mcpo  README.md  compose.mcpo.yml  compose.yml  publiccode.yml  pyproject.toml  run_tests.sh
.github/workflows/: docker-build-push.yml
docs/adr/: 0001-summary-query-uses-fdsn-text.md  0002-datacenter-agnostic-defer-validation.md  0003-offset-pagination-spec-passthrough.md  0004-license-agpl.md  0005-docker-image-release-strategy.md
docs/design/: 2026-06-query-redesign.md
plan/fdsn-search-earthquakes/: feature-001-add-httpx-dependency.md  feature-002-pydantic-model.md  feature-003-http-text-client.md  feature-004-register-mcp-tool.md  feature-005-update-documentation.md  feature-006-end-to-end-tests.md  overview.md
src/fdsnws_event_server/: __init__.py  models.py  obspy_client.py  server.py
tasks/: prd-fdsn-search-earthquakes.md
tests/: README.md
tests/ab/: eventid_hallucination_ab.py
tests/fixtures/: ingv_emilia_2012-05-29.txt
tests/integration/: test_live_ingv.py
tests/unit/: test_byid_states.py  test_models.py  test_parse_fdsn_text.py  test_query_events_text.py
