[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-fdsnws-event-server"
version = "1.0.0"
description = "MCP server for the FDSNWS Event API (multi-datacenter)"
authors = [
    {name = "Valentino Lauciani", email = "valentino.lauciani@ingv.it"}
]
dependencies = [
    "mcp>=1.0.0",
    "obspy>=1.4.2",
    "pydantic>=2.0.0",
    "requests>=2.0.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.scripts]
mcp-fdsnws-event-server = "fdsnws_event_server.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that hit live FDSN datacenters (network required; opt-in)",
]
addopts = "-m 'not integration'"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
